--- a/.github/workflows/check-spdx-license-id.yml
+++ b/.github/workflows/check-spdx-license-id.yml
@@ -13,12 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
-
-      - name: Check SPDX-License-Identifier
+      - name: Check
         run: |
           #!/bin/bash
+          set -e
           counter=0
-          missing_counter=0
 
           search() {
             local directory="$1"
@@ -37,17 +36,11 @@ jobs:
 
           check() {
             local file="$1"
-            if ! [ -f "$file" ]; then
-              echo "Warning: $file is missing."
-              ((missing_counter++))
-              return 0
-            fi
-
             if ! (
               grep -q -E "SPDX-FileCopyrightText: (syuilo and misskey-project ,Type4ny-Project|Type4ny-Project)" "$file" ||
               grep -q "SPDX-License-Identifier: AGPL-3.0-only" "$file"
             ); then
-              echo "Missing SPDX-License-Identifier: $file"
+              echo "Missing: $file"
               ((counter++))
             fi
           }
@@ -78,9 +71,7 @@ jobs:
           if [ $counter -gt 0 ]; then
             echo "SPDX-License-Identifier is missing in $counter files."
             exit 1
-          elif [ $missing_counter -gt 0 ]; then
-            echo "$missing_counter files were missing, but no error will be raised."
-            exit 0
           else
             echo "SPDX-License-Identifier is certainly described in all target files!"
             exit 0
+          fi
