--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "type4ny",
-	"version": "0.1.4-beta",
+	"version": "0.1.4-beta.1",
 	"codename": "emerald",
 	"repository": {
 		"type": "git",
