--- a/.github/workflows/docker-develop.yml
+++ b/.github/workflows/docker-develop.yml
@@ -5,52 +5,48 @@ on:
     branches:
       - develop
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: type4ny
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
     if: github.repository == 'type4ny-project/type4ny'
     permissions:
       contents: read
       packages: write
     steps:
-      - name: Checkout
+      - name: Check out the repo
         uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
+          platforms: linux/amd64
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/type4ny-project/${{ env.IMAGE_NAME }}
-
-      - name: Build and Push Container
+          images: ghcr.io/type4ny-project/type4ny
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Prepare image tags
+        run: |
+          echo "FORMATTED_BRANCH_NAME=$(echo ${{ github.ref_name }} | sed -e 's/\//-/g' )" >> $GITHUB_ENV
+      - name: Build and Push to GitHub Container Registry
         uses: docker/build-push-action@v6
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
           push: true
           platforms: ${{ steps.buildx.outputs.platforms }}
-          tags: ghcr.io/type4ny-project/type4ny:develop
-          labels: develop
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-# https://qiita.com/Jazuma/items/aca397e081a7825d0dec
+          provenance: false
+          labels: ${{ env.FORMATTED_BRANCH_NAME }}
+          cache-from: type=registry,ref=ghcr.io/type4ny-project/type4ny:buildcache
+          cache-to: type=registry,ref=ghcr.io/type4ny-project/type4ny:buildcache,mode=max
+          tags: |
+            ghcr.io/type4ny-project/type4ny:latest
+            ghcr.io/type4ny-project/type4ny:${{ env.FORMATTED_BRANCH_NAME }}
+
+# https://github.com/MisskeyIO/misskey/blob/io/.github/workflows/docker-io.yml
