--- a/.github/workflows/docker-develop.yml
+++ b/.github/workflows/docker-develop.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          platforms: ${{ steps.buildx.outputs.platforms }}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
