--- a/.github/workflows/docker-develop.yml
+++ b/.github/workflows/docker-develop.yml
@@ -26,7 +26,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: ${{ steps.buildx.outputs.platforms }}
+          platforms: linux/amd64
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
