--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "type4ny",
-	"version": "1.1.0",
+	"version": "1.2.0-beta",
 	"codename": "emerald",
 	"repository": {
 		"type": "git",
