--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "type4ny",
-	"version": "1.2.2",
+	"version": "1.2.2-beta.1",
 	"codename": "emerald",
 	"repository": {
 		"type": "git",
